clusters/my-cluster/health-management/frontend/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: health-management
  labels:
    app.kubernetes.io/name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: andercl/health-management-frontend:1.0.12 # {"$imagepolicy": "flux-system:frontend"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
