clusters/my-cluster/health-management/frontend/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: health-management
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-throttle: "4"
  labels:
    app.kubernetes.io/name: frontend
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
    type: NodePort
  selector:
    app: frontend
    app.kubernetes.io/name: frontend
  sessionAffinity: None
